<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:columnCount="6"
    android:gravity="center"
    android:orientation="horizontal"
    android:rowCount="25" >

    <Space />

    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="0"
        android:gravity="center"
        android:hint="@string/titleText"
        android:textSize="16sp" />

    <Space
        android:layout_width="194dp"
        android:layout_height="100dp"
        android:layout_column="4"
        android:layout_row="4" />

    <Space
        android:layout_width="1dp"
        android:layout_height="15dp"
        android:layout_row="17" />

    <Space />

    <Space
        android:layout_width="1dp"
        android:layout_height="15dp"
        android:layout_row="21" />

    <Space />

    <!--
    <com.google.android.gms.common.SignInButton
    android:id="@+id/sign_in_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />
    -->

    <requestFocus />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="152dp"
        android:layout_height="62dp"
        android:layout_column="0"
        android:layout_gravity="left|center_vertical"
        android:layout_row="4"
        android:text="@string/Login" />

    <TextView
        android:id="@+id/mainText"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="17"
        android:ems="10"
        android:text="@string/MainText"
        android:textSize="16sp"
        android:textColor="#55BBEE" />

    <Button
        android:id="@+id/btnInstructions"
        android:layout_width="139dp"
        android:layout_height="64dp"
        android:layout_column="0"
        android:layout_gravity="right|center_vertical"
        android:layout_row="4"
        android:text="@string/Instruction" />

</GridLayout>